Add bulk inventory tag mutations
